--- a/src/app/components/routes/profile/profile.component.html
+++ b/src/app/components/routes/profile/profile.component.html
@@ -34,11 +34,14 @@
                                     {{eventsResponses[i]}}
                                 </td>
                                 <td class="align-middle">
-                                    <a type="button" (click)="disableEvent(item['id'])" *ngIf="item['active']">
+                                    <a type="button" (click)="disableEvent(item['id'])" *ngIf="item['active']" placement="left" ngbTooltip="Deshabilitar" tooltipClass="my-custom-class">
                                         <i class="fas fa-eye-slash"></i>
                                     </a>
-                                    <a type="button" (click)="enableEvent(item['id'])" *ngIf="!item['active']">
+                                    <a type="button" (click)="enableEvent(item['id'])" *ngIf="!item['active']" placement="left" ngbTooltip="Habilitar">
                                         <i class="fas fa-eye"></i>
+                                    </a>
+                                    <a type="button" (click)="cloneEvent(item['id'])" class="ml-3" placement="right" ngbTooltip="Clonar">
+                                        <i class="fas fa-clone"></i>
                                     </a>
                                 </td>
                             </tr>
