profile clone done

--- a/src/app/components/routes/create/create.component.css
+++ b/src/app/components/routes/create/create.component.css
@@ -40,3 +40,8 @@ textarea {
     color: #5161CE;
     background-color: #dddddd;
 }
+
+a, a:hover {
+    text-decoration: none;
+    color: black;
+}
