--- a/src/app/components/routes/profile/profile.component.html
+++ b/src/app/components/routes/profile/profile.component.html
@@ -1,4 +1,4 @@
-<div class="container p-0 pb_form_v1">
+<div class="container p-0 pb_form_v1"  *ngIf="!this.toClone">
     <div class="row col-md-12 bhoechie-tab-container m-0">
         <div class="col-md-2 bhoechie-tab-menu">
             <div class="list-group">
@@ -34,13 +34,13 @@
                                     {{eventsResponses[i]}}
                                 </td>
                                 <td class="align-middle">
-                                    <a type="button" (click)="disableEvent(item['id'])" *ngIf="item['active']" placement="left" ngbTooltip="Deshabilitar" tooltipClass="my-custom-class">
+                                    <a type="button" (click)="disableEvent(item['id'])" *ngIf="item['active']" placement="left" ngbTooltip="Habilitar" tooltipClass="my-custom-class">
                                         <i class="fas fa-eye-slash"></i>
                                     </a>
-                                    <a type="button" (click)="enableEvent(item['id'])" *ngIf="!item['active']" placement="left" ngbTooltip="Habilitar">
+                                    <a type="button" (click)="enableEvent(item['id'])" *ngIf="!item['active']" placement="left" ngbTooltip="Deshabilitar">
                                         <i class="fas fa-eye"></i>
                                     </a>
-                                    <a type="button" (click)="cloneEvent(item['id'])" class="ml-3" placement="right" ngbTooltip="Clonar">
+                                    <a type="button" (click)="cloneEvent(item)" class="ml-3" placement="right" ngbTooltip="Clonar">
                                         <i class="fas fa-clone"></i>
                                     </a>
                                 </td>
@@ -56,3 +56,4 @@
         </div>
     </div>
 </div>
+<app-create *ngIf="this.toClone" [eventToClone]="this.eventToClone"></app-create>
