--- a/src/app/components/routes/profile/profile.component.html
+++ b/src/app/components/routes/profile/profile.component.html
@@ -43,6 +43,9 @@
                                     <a type="button" (click)="cloneEvent(item)" class="ml-3" placement="right" ngbTooltip="Clonar">
                                         <i class="fas fa-clone"></i>
                                     </a>
+                                    <a type="button" (click)="eventResults(item)" class="ml-3" placement="top" ngbTooltip="Resultados">
+                                        <i class="fas fa-poll"></i>
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
