--- a/src/app/components/resources/navbar/navbar.component.html
+++ b/src/app/components/resources/navbar/navbar.component.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav maleft">
-            <div class="hori-selector" *ngIf="!this.exists()">
+            <div class="hori-selector" *ngIf="this.print()">
                 <div class="left"></div>
                 <div class="right"></div>
             </div>
