--- a/src/styles.css
+++ b/src/styles.css
@@ -67,3 +67,16 @@ body {
     -moz-box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
     box-shadow: 0px 15px 28px -5px rgba(29, 130, 255, 0.45);
 }
+
+.cal-week-view .cal-time-events {
+    max-height: 60vh;
+    overflow-y: auto;
+}
+
+.cal-day-columns {
+    height: 100%;
+}
+
+.cal-day-headers {
+    margin-right: 14.5px;
+}
